--- a/README
+++ b/README
@@ -155,3 +155,6 @@ Delete Receipt Product:
                     {
                       "productId" : 2 
                     }------WebKitFormBoundary7MA4YWxkTrZu0gW--
+
+
+MySql Query File /ajithapi/protected/data/schema.mysql.sql
